--- a/index.html
+++ b/index.html
@@ -59,29 +59,28 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/home/panhandle-feature.webp" alt="Featured Release">
+      <img src="assets/images/home/latest-release.webp" alt="Featured Release">
       </div>
 
-      <div class="falling-shapes">
-        <img src="assets/images/effects/panhandle/leaf1.webp" class="shape" style="--i:1;">
-        <img src="assets/images/effects/panhandle/leaf2.webp" class="shape" style="--i:2;">
-        <img src="assets/images/effects/panhandle/leaf3.webp" class="shape" style="--i:3;">
-        <img src="assets/images/effects/panhandle/leaf4.webp" class="shape" style="--i:4;">
-      </div>
+      <!-- <div class="falling-shapes">
+        <img src="assets/images/home/effects/leaf1.webp" class="shape" style="--i:1;">
+        <img src="assets/images/home/effects/leaf2.webp" class="shape" style="--i:2;">
+        <img src="assets/images/home/effects/leaf3.webp" class="shape" style="--i:3;">
+        <img src="assets/images/home/effects/leaf4.webp" class="shape" style="--i:4;">
+      </div> -->
 
 
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">midwest heartbreak</h3>
+        <h3 class="release-title">For A Moment I Was Warm</h3>
         <div class="rainbow-underline"></div>
         <p>
-          The freshman album by Oklahoma’s panhandle is now on cassette for the very first time. 
+          Donovan Funk returns with his 2nd and final album “For A Moment I Was Warm”.
           <br> <br>
-          Limited to 25 first edition HIFI real-time dubbed chocolate swirl cassettes with label stickers and numbered card. Hand dubbed, stamped, and packaged. 
+          This album stays true to his slow and soft rock sound and marks the end of a massive chapter in his music career.
         </p>
-        <!-- <p><strong>Limited to 25 copies.</strong></p> -->
-        <button class="pre-order-button" onclick="location.href='store/mcr-008/'">
-          BUY NOW
+        <button class="pre-order-button" onclick="location.href='store/mcr-010/'">
+          PRE-ORDER
         </button>        
       </div>
     </div>
@@ -89,6 +88,24 @@
     <!-- Store Section -->
     <div class="store-section">
       <div class="store-grid">
+
+        <a href="store/mcr-010/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">DONOVAN FUNK</p>
+                <p class="merch-block-product-name">For A Moment I Was Warm - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
 
         <a href="store/mcr-008/" class="merch-link">
           <div class="merch-block">
