--- a/store/index.html
+++ b/store/index.html
@@ -193,6 +193,24 @@
             </div>
           </a>
 
+          <a href="mcr-010/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">DONOVAN FUNK</p>
+                  <p class="merch-block-product-name">For A Moment I Was Warm - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <!-- <a href="new-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
