--- a/store/mcr-010/index.html
+++ b/store/mcr-010/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Promo - Donovan Funk</title>
+    <title>Cassette - For A Moment I Was Warm - Donovan Funk</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -47,21 +47,21 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-006/mcr-006-full.webp" alt="Promo - Donovan Funk">
+          <img src="../../assets/images/products/mcr-010/mcr-010-full.webp" alt="Product Image">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Promo</h1>
+          <h1 class="product-title">For A Moment I Was Warm - Pre-order</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">Donovan Funk</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: October 16, 2024</p>
+          <p class="release-date">Release Date: November 29, 2025</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1749107208912'></div>
+              <div id='product-component-1761084114060'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -89,8 +89,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7844870783030',
-                      node: document.getElementById('product-component-1749107208912'),
+                      id: '7971279634486',
+                      node: document.getElementById('product-component-1761084114060'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -397,16 +397,21 @@
             <h3>Track List</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Stay</li>
+              <li>Dust</li>
               <li>Window</li>
+              <li>Beautiful</li>
+              <li>Lack Thereof</li>
+              <li>Carry Me</li>
+              <li>Stay</li>
+              <li>Falling</li>
           </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
             <div class="whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
-            <p>Solid Shamrock Green Cassette x15</p>
-            <p>MCR-006</p>
+            <p>Transparent Pink Cassette x40</p>
+            <p>MCR-010</p>
           </div>
         </div>
       </div>
@@ -416,11 +421,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        MCR welcomes Donovan Funk and his first cassette release "Promo". Featuring tracks "Stay" and "Window", this sampler gives a great look into Donovan's unique and emotional slow rock sound.
+        Donovan Funk returns with "For A Moment I Was Warm", his second and final album.
         <br><br>
-        This release is packaged with a solid white case with cover art sticker, solid shamrock green cassette and label, numbered insert card, and one MCR sticker.
+        Staying true to his signature soft and slow rock sound, this release brings a heartfelt close to a significant chapter in his music career.
         <br><br>
-        Limited to just 15, get one while you can!
+        It marks the final project released under the name Donovan Funk.
       </p>
     </section>
 
@@ -437,16 +442,16 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../mcr-010/" class="merch-link">
+            <a href="../mcr-006/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">DONOVAN FUNK</p>
-                    <p class="merch-block-product-name">For A Moment I Was Warm - CASSETTE</p>
+                    <p class="merch-block-artist-name">Donovan Funk</p>
+                    <p class="merch-block-product-name">Promo</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -455,25 +460,7 @@
               </div>
             </a>
 
-            <a href="../mcr-001/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
-                    <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
@@ -481,8 +468,26 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                    <p class="merch-block-artist-name">Cryhard</p>
+                    <p class="merch-block-product-name">Of Course I Will - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-007/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">powdr</p>
+                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
