changed d-funk to released

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           This album stays true to his slow and soft rock sound and marks the end of a massive chapter in his music career.
         </p>
         <button class="pre-order-button" onclick="location.href='store/mcr-010/'">
-          PRE-ORDER
+          BUY NOW
         </button>        
       </div>
     </div>
