--- a/store/mcr-010/index.html
+++ b/store/mcr-010/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">For A Moment I Was Warm - Pre-order</h1>
+          <h1 class="product-title">For A Moment I Was Warm</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">Donovan Funk</h2>
           <div class="whitespace"></div>
