--- a/index.html
+++ b/index.html
@@ -89,6 +89,24 @@
     <div class="store-section">
       <div class="store-grid">
 
+        <a href="store/pndl-001/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">panhandle.</p>
+                <p class="merch-block-product-name">Horse Smoking T-Shirt</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$25</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
         <a href="store/mcr-010/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
@@ -205,8 +223,8 @@
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">Hat</p>
-                <p class="merch-block-product-name">Black Corduroy</p>
+                <p class="merch-block-artist-name">Mystery Class Hat</p>
+                <p class="merch-block-product-name">Mystery Class Records</p>
               </div>
               <div class="merch-block-price-container">
                 <div class="merch-block-price">$30</div>
