--- a/store/mcr-008/index.html
+++ b/store/mcr-008/index.html
@@ -444,6 +444,24 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
+            <a href="../pndl-001/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">panhandle.</p>
+                    <p class="merch-block-product-name">Horse Smoking T-Shirt</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
@@ -454,24 +472,6 @@
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">Cryhard</p>
                     <p class="merch-block-product-name">Of Course I Will - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-007/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">powdr</p>
-                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -506,8 +506,8 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
+                    <p class="merch-block-artist-name">Mystery Class Hat</p>
+                    <p class="merch-block-product-name">Mystery Class Records</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
