--- a/store/mcr-004/index.html
+++ b/store/mcr-004/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,9 +54,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">POND</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Toad Socks</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <p class="release-date">Release Date: December 5, 2021</p>
           <hr class="separator">
           <div class="price-and-button">
@@ -395,7 +397,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               <li>Afro Boy</li>
               <li>Space Jam</li>
@@ -408,14 +410,14 @@
               <li>Leak 2</li>
               <li>Toad Crossing</li>
               <h3>Bonus Track</h3>
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               <li>Eastcreek Slowdance</li>
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
             <p>Solid Green Cassette x20</p>
             <p>MCR-004</p>
