--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -58,9 +60,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">Portable Cassette Player</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Transparent</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$25</span>
@@ -400,7 +402,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>How to Use</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               <li>Insert your favorite cassette tape.</li>
               <li>Plug in wired headphones or connect to an aux cable.</li>
@@ -411,7 +413,7 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Specs:</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>Transparent Plastic Portable Cassette Player</p>
             <p>1/8-inch (3.5mm) Stereo Audio Output</p>
             <p>Powered by AA Batteries</p>
