--- a/store/pndl-001/index.html
+++ b/store/pndl-001/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,15 +54,16 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">Horse Smoking T-Shirt</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Panhandle</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$25</span>
+            
             <div class="product-buy-button">
 
-              <div id='product-component-1746666953720'></div>
+              <div id='product-component-1764804198366'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -88,8 +91,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7765761392694',
-                      node: document.getElementById('product-component-1746666953720'),
+                      id: '8023214030902',
+                      node: document.getElementById('product-component-1764804198366'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -394,21 +397,21 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Product Specs</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               100% Cotton
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               Comfort Colors® Tee
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               Short-Sleeve, Off-White
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               Horse Smoking Graphic on Front
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Care Instructions</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>Wash cold, inside out, with like colors.</p>
             <p>Tumble dry low or air dry.</p>
             <p>Avoid bleach or ironing the graphic.</p>
