--- a/store/new-005/index.html
+++ b/store/new-005/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,9 +54,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">Mystery Class Hat</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Black Corduroy</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$30</span>
@@ -394,19 +396,19 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Product Specs</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               100% Cotton
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               Embroidered <i>Mystery Class Records</i> Logo
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               Adjustable Strap with Metal Buckle
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Care Instructions</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>Spot clean with a damp cloth.</p>
             <p>Hand wash in cold water if needed.</p>
             <p>Reshape while damp and air dry.</p>
