--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,9 +54,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">OF COURSE I WILL</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Cryhard</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <p class="release-date">Release Date: July 19, 2024</p>
           <hr class="separator">
           <div class="price-and-button">
@@ -393,7 +395,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               <li>Mind Flayer</li>
               <li>Dementors</li>
@@ -409,7 +411,7 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>First Edition Hi-Fi Duplication</p>
             <p>Transparent  Cassette x50</p>
             <p>MCR-002</p>
@@ -505,8 +507,8 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
+                    <p class="merch-block-artist-name">Mystery Class Hat</p>
+                    <p class="merch-block-product-name">Mystery Class Records</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
