--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,9 +54,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">STRETCH US OUTTA HERE</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Cryhard</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <p class="release-date">Release Date: July 16, 2022</p>
           <hr class="separator">
           <div class="price-and-button">
@@ -395,7 +397,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               <li>Pioneer</li>
               <li>A Xing</li>
@@ -404,7 +406,7 @@
               <li>Maximum Sunset</li>
               <li>Ovrlrd of the Undrwrld</li>
               <h3>Bonus Tracks</h3>
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               <li>Summer Mourning</li>
               <li>If You Want</li>
               <li>Powder</li>
@@ -413,7 +415,7 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
             <p>Transparent Orange Cassette x25</p>
             <p>MCR-003</p>
@@ -510,8 +512,8 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
+                    <p class="merch-block-artist-name">Mystery Class Hat</p>
+                    <p class="merch-block-product-name">Mystery Class Records</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
