--- a/store/mcr-005/index.html
+++ b/store/mcr-005/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -52,9 +54,9 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">Burner Tape, Vol. 2</h1>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Sweetest Pot</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <p class="release-date">Release Date: September 30, 2022</p>
           <hr class="separator">
           <div class="price-and-button">
@@ -395,7 +397,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <ol>
               <li>Flowers</li>
               <li>Gondolas Row</li>
@@ -406,7 +408,7 @@
               <li>Canals</li>
               <li>One Sided Victories</li>
               <h3>Bonus Tracks</h3>
-              <div class="whitespace"></div>
+              <div class="vertical-whitespace"></div>
               <li>Bridges</li>
               <li>Fumble</li>
               <li>ICD-10</li>
@@ -415,7 +417,7 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
-            <div class="whitespace"></div>
+            <div class="vertical-whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
             <p>Transparent Blue Cassette x25</p>
             <p>MCR-005</p>
@@ -510,8 +512,8 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
+                    <p class="merch-block-artist-name">Mystery Class Hat</p>
+                    <p class="merch-block-product-name">Mystery Class Records</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
