--- a/store/new-005/index.html
+++ b/store/new-005/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hat - Mystery Class Records</title>
+    <title>Mystery Class Hat - Mystery Class Records</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
   </head>
   
   <body>
@@ -51,10 +53,10 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Hat</h1>
-          <div class="whitespace"></div>
+          <h1 class="product-title">Mystery Class Hat</h1>
+          <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Black Corduroy</h2>
-          <div class="whitespace"></div>
+          <div class="vertical-whitespace"></div>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$30</span>
@@ -393,22 +395,23 @@
           </div>
           <hr class="separator">
           <div class="track-list">
-            <h3>Care Instructions</h3>
-            <div class="whitespace"></div>
+            <h3>Product Specs</h3>
+            <div class="vertical-whitespace"></div>
             <ol>
-              <li>Spot clean with a damp cloth.</li>
-              <li>Hand wash gently in cold water if needed.</li>
-              <li>Do not bleach or tumble dry.</li>
-              <li>Reshape while damp and air dry.</li>
+              100% Cotton
+              <div class="vertical-whitespace"></div>
+              Embroidered <i>Mystery Class Records</i> Logo
+              <div class="vertical-whitespace"></div>
+              Adjustable Strap with Metal Buckle
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Product Specs:</h3>
-            <div class="whitespace"></div>
-            <p>100% Cotton</p>
-            <p>Embroidered <i>Mystery Class Records</i> Logo</p>
-            <p>Adjustable Strap with Metal Buckle</p>
+            <h3>Care Instructions</h3>
+            <div class="vertical-whitespace"></div>
+            <p>Spot clean with a damp cloth.</p>
+            <p>Hand wash in cold water if needed.</p>
+            <p>Reshape while damp and air dry.</p>
           </div>
         </div>
       </div>
