finished hobbyist pre-order, reordered store

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/home/latest-release.webp" alt="Featured Release">
+      <img src="assets/images/products/mcr-009/latest-release.webp" alt="Latest Release">
       </div>
 
-      <!-- <div class="falling-shapes">
-        <img src="assets/images/home/effects/leaf1.webp" class="shape" style="--i:1;">
-        <img src="assets/images/home/effects/leaf2.webp" class="shape" style="--i:2;">
-        <img src="assets/images/home/effects/leaf3.webp" class="shape" style="--i:3;">
-        <img src="assets/images/home/effects/leaf4.webp" class="shape" style="--i:4;">
-      </div> -->
+      <div class="falling-shapes">
+        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:1;">
+        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:2;">
+        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:3;">
+        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:4;">
+      </div>
 
 
       <div class="release-text">
@@ -75,12 +75,12 @@
         <h3 class="release-title">For A Moment I Was Warm</h3>
         <div class="rainbow-underline"></div>
         <p>
-          Donovan Funk returns with his 2nd and final album “For A Moment I Was Warm”.
+          In collaboration with Zaragoza Record House—introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
           <br> <br>
-          This album stays true to his slow and soft rock sound and marks the end of a massive chapter in his music career.
+          Limited to only 5, get your hands on this ultra rare gem while you can!
         </p>
-        <button class="pre-order-button" onclick="location.href='store/mcr-010/'">
-          BUY NOW
+        <button class="pre-order-button" onclick="location.href='store/mcr-009/'">
+          PRE-ORDER
         </button>        
       </div>
     </div>
@@ -88,6 +88,24 @@
     <!-- Store Section -->
     <div class="store-section">
       <div class="store-grid">
+
+        <a href="store/mcr-009/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Hobbyist,</p>
+                <p class="merch-block-product-name">Demo.nstration #1 - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
 
         <a href="store/pndl-001/" class="merch-link">
           <div class="merch-block">
