--- a/store/mcr-009/index.html
+++ b/store/mcr-009/index.html
@@ -399,7 +399,12 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li></li>
+              <li>Mckngbrd Breeez</li>
+              <li>The Candidate</li>
+              <li>Silk Streak</li>
+              <li>RedHat</li>
+              <li>New Things</li>
+              <li>Slketch</li>
           </div>
           <hr class="separator">
           <div class="pressing-info">
@@ -417,7 +422,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        In collaboration with Zaragoza Record House— introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
+        In collaboration with Zaragoza Record House—introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
         Limited to only 5, get your hands on this ultra rare gem while you can!
       </p>
@@ -436,16 +441,34 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../pndl-001/" class="merch-link">
+            <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">panhandle.</p>
-                    <p class="merch-block-product-name">Horse Smoking T-Shirt</p>
+                    <p class="merch-block-artist-name">Mystery Class Hat</p>
+                    <p class="merch-block-product-name">Mystery Class Records</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-001/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                    <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -490,23 +513,6 @@
               </div>
             </a>
 
-            <a href="../new-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Mystery Class Hat</p>
-                    <p class="merch-block-product-name">Mystery Class Records</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
-                  </div>
-                </div>
-              </div>
-            </a>
 
           </div>
         </div>
