--- a/store/index.html
+++ b/store/index.html
@@ -48,6 +48,186 @@
       <div class="store-container">
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
+          
+          <a href="mcr-009/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Hobbyist,</p>
+                  <p class="merch-block-product-name">Demo.nstration #1 - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="pndl-001/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">panhandle.</p>
+                  <p class="merch-block-product-name">Horse Smoking T-Shirt</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$25</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-010/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">DONOVAN FUNK</p>
+                  <p class="merch-block-product-name">For A Moment I Was Warm - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-008/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">panhandle.</p>
+                  <p class="merch-block-product-name">midwest heartbreak - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-007/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">powdr</p>
+                  <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a> 
+
+          <a href="mcr-006/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Donovan Funk</p>
+                  <p class="merch-block-product-name">Promo - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-005/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Sweetest Pot</p>
+                  <p class="merch-block-product-name">Burner Tape, Vol. 2 - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-004/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">TOAD SOCKS</p>
+                  <p class="merch-block-product-name">POND - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="new-005/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Mystery Class Hat</p>
+                  <p class="merch-block-product-name">Mystery Class Records</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$30</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-003/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
 
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
@@ -83,187 +263,7 @@
                 </div>
               </div>
             </div>
-          </a>
-
-          <a href="mcr-003/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="mcr-004/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">TOAD SOCKS</p>
-                  <p class="merch-block-product-name">POND - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="mcr-005/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Sweetest Pot</p>
-                  <p class="merch-block-product-name">Burner Tape, Vol. 2 - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="mcr-006/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Donovan Funk</p>
-                  <p class="merch-block-product-name">Promo - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="mcr-007/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">powdr</p>
-                  <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a> 
-          
-          <a href="mcr-008/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">panhandle.</p>
-                  <p class="merch-block-product-name">midwest heartbreak - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="mcr-010/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">DONOVAN FUNK</p>
-                  <p class="merch-block-product-name">For A Moment I Was Warm - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <!-- <a href="new-001/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Portable Cassette Player</p>
-                  <p class="merch-block-product-name">Transparent</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$25</div>
-                </div>
-              </div>
-            </div>
-          </a> -->
-
-          <a href="new-005/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Mystery Class Hat</p>
-                  <p class="merch-block-product-name">Mystery Class Records</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$30</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="pndl-001/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">panhandle.</p>
-                  <p class="merch-block-product-name">Horse Smoking T-Shirt</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$25</div>
-                </div>
-              </div>
-            </div>
-          </a>
+          </a>          
 
         </div>
       </div>
