fixed home text

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">For A Moment I Was Warm</h3>
+        <h3 class="release-title">Demo.nstration #1</h3>
         <div class="rainbow-underline"></div>
         <p>
           In collaboration with Zaragoza Record House—introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
